# Jarvis

./: .gitignore  Cargo.toml  README.md  Trunk.toml
chatgpt_interactions/: WhyHideTheseContentsInGitignore.md
src/: lib.rs
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
static/: index.html
