[package]
name = "app"
version = "0.1.0"
description = "Tauri Dominator"
authors = ["Alve Larsson <larsalvelarsson@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
incremental = false
opt-level = "s"

[lib]
crate-type = ["cdylib"]

[dependencies]
dominator = { version = "0.5.19"}
wasm-bindgen = { version = "0.2.74"}
wee_alloc = { version = "0.4.5"}
csv = { version = "1.1.6" }
